<resources>
    <string name="app_name">MyCampus</string>
    <string name="action_settings">Settings</string>
    <string name="Sign_up_with_email">Sign up with email</string>
    <string name="signup_info">The above information is only used for application purposes, (IE: additional customization), and will never be shared, sold, or used in any way for the benefit of the MyCampus application team.</string>
    <string name="signup_nextstepstext">An email will be sent to the specified emailed address. You must verify your email and then sign in before using this app.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="notif_title">Renew Listing</string>
    <string name="notif_text">Please renew your listing or else it will be automatically deleted.</string>

    <string name="menu_all">MyCampus</string>
    <string name="menu_books">MyCampus</string>
    <string name="menu_furniture">MyCampus</string>
    <string name="menu_tech">MyCampus</string>
    <string name="menu_tutor">MyCampus</string>
    <string name="menu_housing">MyCampus</string>
    <string name="menu_subleasing">MyCampus</string>

    <string name="create_new_listing">Create a New Listing</string>

    <string name="set_home">Home</string>
    <string name="set_myposts">My postings</string>
    <string name="set_search">Search postings</string>
    <string name="set_settings">Settings</string>
    <string name="set_tutor">Tutoring</string>
    <string name="set_housing">Apartments/Houses</string>
    <string name="set_subleasing">Sub-Leasings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="set_discount">Student discounts</string>
    <string name="menu_home">Recent postings</string>
    <string name="menu_gallery">MyCampus</string>
    <string name="menu_slideshow">MyCampus</string>
    <string name="menu_tools">MyCampus</string>
    <string name="menu_share">MyCampus</string>
    <string name="menu_send">MyCampus</string>

    <string-array name="days">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
    </string-array>


    <string-array name="array_category">
        <item>All</item>
        <item>Furniture</item>
        <item>Textbooks</item>
        <item>Technology</item>
        <item>Tutoring</item>
        <item>Apartment/Houses</item>
        <item>Sub-Leasings</item>
    </string-array>

    <string-array name="array_category2">
        <item>Furniture</item>
        <item>Household Items</item>
        <item>Textbooks</item>
        <item>Technology</item>
        <item>Tutoring</item>
        <item>Housing</item>
        <item>Sub-Leasings</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myPostingsHeader">My postings</string>
    <string name="profileMenuLabel">My profile</string>

</resources>
