<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:id="@+id/group_divider" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/set_home" />
    </group>



    <group android:id="@+id/group_divider2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myPosts"

            android:title="@string/set_myposts" />
        <item
            android:id="@+id/nav_search"

            android:title="@string/set_search" />
    </group>




    <item
        android:id="@+id/nav_profile"

        android:title="@string/profileMenuLabel" />

    <item
        android:id="@+id/nav_discount"

        android:title="@string/set_discount" />

    <item

        android:id="@+id/nav_logout"
        android:title="Logout" />


</menu>